--- a/index.html
+++ b/index.html
@@ -1,1 +1,66 @@
 
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+ 
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Victor Naets</title>
+<style>
+  body {background-color: #1a75ff;
+    font-family: Arial, sans-serif;
+  }
+  header {
+    text-align: center;
+    font-size: 2em;
+    margin: 20px 0;
+  }
+  .separator {
+    height: 5px;
+    background-color: #000;
+    margin: 20px 0;
+  }
+  .title {
+    text-align: center;
+    font-size: 1.5em;
+    margin: 20px 0;
+  }
+  .content {
+    display: flex;
+    justify-content: space-around;
+    margin: 20px;
+  }
+  .content div {
+    text-align: center;
+  }
+  .content img {
+    width: 150px; /* Placeholder size */
+    height: 210px; /* Placeholder size */
+    background-color: #ccc;
+    display: block;
+    margin: 0 auto 10px;
+  }
+</style>
+</head>
+<body>
+
+<header>Victor</header>
+  
+    <div class="separator"></div>
+ 
+    <div class="separator"></div>
+  
+ 
+  <div></div>
+    <div class="separator"></div>
+
+
+  <div class="separator"></div>
+<div>  </div>
+   <div class="separator"></div>
+  
+</body>
+</html>
+
+
